--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/Maximbndrnk/prepaid-expence-tracking-system-rbc#readme",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
